[gd_scene load_steps=7 format=2]

[ext_resource path="res://sources/characters/player/rope/VerletRope.gd" type="Script" id=1]
[ext_resource path="res://sources/characters/player/rope/LastParticle.gd" type="Script" id=2]
[ext_resource path="res://sources/characters/player/rope/VerletParticleArea.gdns" type="Script" id=3]
[ext_resource path="res://addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="CircleShape2D" id=2]
radius = 1.0

[node name="VerletRope" type="Line2D"]
width = 1.0
default_color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}
rope_length = 2.0
max_length = 200.0
simulation_particles = 120
iterations = 75
impulse_factor = 200.0
simulate = false
draw = false

[node name="Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
visible = false
shape = SubResource( 1 )

[node name="LastParticle" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="LastParticle"]
collision_mask = 0
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="LastParticle"]
collision_mask = 0
collide_with_areas = true

[node name="Area2D" type="Area2D" parent="LastParticle"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LastParticle/Area2D"]
shape = SubResource( 2 )

[node name="LengthLimit" type="KinematicBody2D" parent="."]
collision_layer = 32768
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LengthLimit"]
polygon = PoolVector2Array( 1.22461e-14, -200, 38.1618, -196.325, 74.9213, -185.437, 108.928, -167.734, 141.421, -141.421, 165.808, -111.839, 184.101, -78.1462, 195.63, -41.5823, 200, 0, 196.325, 38.1618, 185.437, 74.9213, 167.734, 108.928, 141.421, 141.421, 111.839, 165.808, 78.1462, 184.101, 41.5823, 195.63, 1.22461e-14, 200, -38.1618, 196.325, -74.9213, 185.437, -108.928, 167.734, -141.421, 141.421, -165.808, 111.839, -184.101, 78.1462, -195.63, 41.5823, -200, 2.44921e-14, -196.325, -38.1618, -185.437, -74.9213, -167.734, -108.928, -141.421, -141.421, -111.839, -165.808, -78.1462, -184.101, -41.5823, -195.63, -3.67382e-14, -200, -2.75536e-14, -150, -31.1868, -146.722, -58.6097, -138.076, -83.8789, -124.356, -106.066, -106.066, -125.801, -81.6959, -139.078, -56.191, -147.244, -28.6213, -150, 1.83691e-14, -146.722, 31.1868, -138.076, 58.6097, -124.356, 83.8789, -106.066, 106.066, -81.6959, 125.801, -56.191, 139.078, -28.6213, 147.244, 9.18455e-15, 150, 31.1868, 146.722, 58.6097, 138.076, 83.8789, 124.356, 106.066, 106.066, 125.801, 81.6959, 139.078, 56.191, 147.244, 28.6213, 150, 0, 146.722, -31.1868, 138.076, -58.6097, 124.356, -83.8789, 106.066, -106.066, 81.6959, -125.801, 56.191, -139.078, 28.6213, -147.244, 9.18455e-15, -150, 0.0001, -200 )
script = ExtResource( 4 )
radius = 150.0
width = 50.0

[connection signal="collision" from="LastParticle" to="." method="_on_LastParticle_collision"]
[connection signal="area_entered" from="LastParticle/Area2D" to="LastParticle" method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="LastParticle/Area2D" to="LastParticle" method="_on_Area2D_body_entered"]
